--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "website",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,9 +12,7 @@
   "dependencies": {
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "mongodb": "^6.17.0",
-    "mysql2": "^3.14.1"
+    "express": "^4.18.2"
   },
   "description": ""
 }
