--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  {
   "dependencies": {
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.11.0"
+  }
+}
   },
   "description": ""
 }
