--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "website",
+  "name": "zamowienia-api",
   "version": "1.0.0",
-  "main": "server.js",
+  "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "dependencies": {
-    "body-parser": "^2.2.0",
-    "cors": "^2.8.5",
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "pg": "^8.11.0"
+    "pg": "^8.11.3"
   }
 }
